# rm-loeil

./: .gitignore  README.md  conference_demo.py  demo.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md
docs/conference-scraper/: cost.md  data-structures.md  index.md  pipeline.md  scraper-lifecycle.md
docs/cost-and-observability/: index.md  model-selection.md  token-budgets.md  tracing.md
docs/investment-memo/: index.md
docs/research-memo/: data-structures.md  index.md  inputs.md  limitations.md  pipeline.md
docs/stylesheets/: extra.css
examples/: conference_scrape_example.json
src/: __init__.py  pipeline.py  state.py
src/conference_scraper/: __init__.py  pipeline.py  scrapers.py  state.py
src/extractors/: __init__.py  facts.py
src/output/: __init__.py  markdown.py
src/scrapers/: __init__.py  crunchbase.py  github.py  news.py  website.py
src/synthesis/: __init__.py  enrichment.py  sections.py
